CSS'ify all the recipe pages

--- a/recipes/lsagna.html
+++ b/recipes/lsagna.html
@@ -1,9 +1,25 @@
+<head>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+
+<body>
+    <div class="div-body">
 <h1>Lasagne</h1>
-<img src="lasagna.jpg" alt="test">
+<img class="header-image" src="lasagna.jpg" alt="test">
 <p>The recipe is made with love.</p>
 
+<h2>Ingredients</h2>
 <ul>
     <li>Pasta</li>
     <li>Tomatoe paste</li>
     <li>Basil</li>
 </ul>
+<h2>Instructions</h2>
+<ol>
+    <li>Beat egg</li>
+    <li>Do this</li>
+</ol>
+<br>
+<a href="../index.html"><button type="button" class="button button-primary">Go Back</button></a>
+</div>
+</body>
