--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!-- index.html -->
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+<body>
+  <div class="div-body">
 <h1>Odin Recipes</h1>
-<p><a href="recipes/lasagne.html">lasagne</a></p>
 <ul>
     <li><a href="recipes/lsagna.html">Lasagna</a></li>
     <li><a href="recipes/mici.html">Mici</a></li>
     <li><a href="recipes/padthai.html">Pad Thai</a></li>
   </ul>
+</div>
+</body>
