--- a/recipes/mici.html
+++ b/recipes/mici.html
@@ -1,9 +1,24 @@
+<head>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+<div class="div-body">
 <h1>Mici</h1>
-<img src="mici.jpg" alt="test">
+<img class="header-image" src="mici.jpg" alt="test">
 <p>The recipe is made with love.</p>
 
+<h2>Ingredients</h2>
 <ul>
     <li>Pasta</li>
     <li>Tomatoe paste</li>
     <li>Basil</li>
 </ul>
+<h2>Instructions</h2>
+<ol>
+    <li>Beat egg</li>
+    <li>Do this</li>
+</ol>
+<br>
+<a href="../index.html"><button type="button" class="button button-primary">Go Back</button></a>
+</div>
+</body>
