Applied div, flexboxes and image hover state to the homepage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 <body>
-  <div class="div-body">
-<h1>Odin Recipes</h1>
-<ul>
-    <li><a href="recipes/lsagna.html">Lasagna</a></li>
-    <li><a href="recipes/mici.html">Mici</a></li>
-    <li><a href="recipes/padthai.html">Pad Thai</a></li>
-  </ul>
-</div>
+  <!-- <div class="div-body"> -->
+    <div class="hero-image">
+      <span class="hero-text"><h1>Weird Wonderful Variety</h1></span>
+    </div>
+    <div class="section-intro">
+      <h2>Recipes for all</h2>
+      <p>Here you will find all the wonderful recipes I have collected and refined over the years.</p> 
+    </div>
+    <div class="gallery-container">
+      <div>
+        <img class ="gallery-cover-image" src="recipes/lasagna.jpg">
+        <div class="gallery-cover-image-link">
+          <div><a href="recipes/lasagna.jpg">Lasagna</a></div>
+        </div>
+      </div>
+      <div>
+        <img class ="gallery-cover-image" src="recipes/padthai.jpg">
+        <div class="gallery-cover-image-link">
+          <div><a href="recipes/padthai.html">Pad Thai</a></div>
+        </div>
+      </div>
+      <div>
+       <img class ="gallery-cover-image" src="recipes/mici.jpg">
+        <div class="gallery-cover-image-link">
+          <div><a href="recipes/mici.html">Mici</a></div>
+        </div>
+      </div>
+      <div>
+       <img class ="gallery-cover-image" src="recipes/padthai.jpg">
+        <div class="gallery-cover-image-link">
+          <div><a href="recipes/padthai.html">Pad Thai</a></div>
+        </div>
+      </div>
+    </div>
+<!-- </div> -->
 </body>
