Added Chicken Machboos as the 4th recipe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div class="section-intro">
       <h2>Recipes for all</h2>
-      <p>Here you will find all the wonderful recipes I have collected and refined over the years.</p> 
+      <p>Here you will find all the wonderful recipes I have collected, experimented and refined upon over the years.</p> 
     </div>
     <div class="gallery-container">
       <div>
@@ -32,9 +32,9 @@
         </div>
       </div>
       <div>
-       <img class ="gallery-cover-image" src="recipes/padthai.jpg">
+       <img class ="gallery-cover-image" src="recipes/chicken-machboos.png">
         <div class="gallery-cover-image-link">
-          <div><a href="recipes/padthai.html">Pad Thai</a></div>
+          <div><a href="recipes/chicken-machboos.html">Chicken Machboos</a></div>
         </div>
       </div>
     </div>
